# bazel-example

./: .gitignore  .gitpod.Dockerfile  .yarnrc.yml  README.md  WORKSPACE.bazel  package.json  tsconfig.json
